--- a/DeviceSettings/res/xml/keyboard_preferences.xml
+++ b/DeviceSettings/res/xml/keyboard_preferences.xml
@@ -15,7 +15,7 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-            android:title="@string/trackpad_title">
+            android:title="@string/category_keyboard_title">
     <Preference
         android:key="pref_quick_launch"
         android:title="@string/quick_launch_title"
